--- a/src/components/Reviews.astro
+++ b/src/components/Reviews.astro
@@ -1,119 +1,160 @@
+---
+import Stars from "./Stars.astro";
+---
+
 <div class="row">
-   <div class="col-12">
-      <section class="box special">
+  <div class="col-12">
+    <section class="box special">
+      <h3>What clients say</h3>
 
-         <h3>What clients say</h3>
+      <br />
 
-         <br>
+      <div class="reviews">
+        <div class="item-carousel">
+          <p>
+            <span class="icon fa-solid fa-quote-left"></span>Happy tail grooming
+            did an EXCELLENT job grooming my 15 year old shih-tzu. My dog was
+            relaxed & looked so cute. Impressed with the skill, communication,
+            timeliness & professionalism! Highly recommend.<span
+              class="icon fa-solid fa-quote-right"></span>
+          </p>
 
-         <div class="reviews">
+          <h4>Mia Acosta</h4>
 
-            <div class="item-carousel">
-               <p><span class="icon fa-solid fa-quote-left"></span>Happy tail grooming did an EXCELLENT job grooming my 15 year old shih-tzu. My dog was relaxed & looked so cute. Impressed with the skill, communication, timeliness & professionalism! Highly recommend.<span class="icon fa-solid fa-quote-right"></span></p>
-               
-               <h4>Mia Acosta</h4>
+          <Stars />
+        </div>
 
-               <div class="stars">
-                  <span class="icon fa-solid fa-star"></span>
-                  <span class="icon fa-solid fa-star"></span>
-                  <span class="icon fa-solid fa-star"></span>
-                  <span class="icon fa-solid fa-star"></span>
-                  <span class="icon fa-solid fa-star"></span>
-               </div>
-            </div>
+        <div class="item-carousel">
+          <p>
+            <span class="icon fa-solid fa-quote-left"></span>Catherine has been
+            grooming my black standard poodle, Splendor for about three years
+            now. She does an amazing job. She makes her look like a show dog
+            even though she is not. Above Catherine’s grooming skills what I
+            really like and appreciate about Catherine is how much my dog loves
+            her. You know when someone is treating your dog right. Splendor
+            having a positive experience at the groomers is just as important to
+            me as her haircut. I highly 100% recommend Catherine and Happy Tail
+            Grooming.<span class="icon fa-solid fa-quote-right"></span>
+          </p>
+          <h4>Mary Murchison</h4>
+          <Stars />
+        </div>
 
-            <div class="item-carousel">
-               <p><span class="icon fa-solid fa-quote-left"></span>Catherine has been grooming my black standard poodle, Splendor for about three years now. She does an amazing job. She makes her look like a show dog even though she is not. Above Catherine’s grooming skills what I really like and appreciate about Catherine is how much my dog loves her. You know when someone is treating your dog right. Splendor having a positive experience at the groomers is just as important to me as her haircut. I highly 100% recommend Catherine and Happy Tail Grooming.<span class="icon fa-solid fa-quote-right"></span></p>
-               <h4>Mary Murchison</h4>
-               <div class="stars">
-                  <span class="icon fa-solid fa-star"></span>
-                  <span class="icon fa-solid fa-star"></span>
-                  <span class="icon fa-solid fa-star"></span>
-                  <span class="icon fa-solid fa-star"></span>
-                  <span class="icon fa-solid fa-star"></span>
-               </div>
-            </div>
+        <div class="item-carousel">
+          <p>
+            <span class="icon fa-solid fa-quote-left"></span>Catherine knows
+            exactly how to take care of my Goldendoodle. She has been grooming
+            her for 3 years now. I feel very relieved to have someone so
+            talented and loving taking care of my dog. I am always surprise to
+            see Sahara (pictured attached) after her grooming as she always
+            comes out looking more beautiful with pretty bows and/or scarfs.<span
+              class="icon fa-solid fa-quote-right"></span>
+          </p>
+          <h4>Dinery Dehart</h4>
+          <Stars />
+        </div>
 
-            <div class="item-carousel">
-               <p><span class="icon fa-solid fa-quote-left"></span>Catherine knows exactly how to take care of my Goldendoodle. She has been grooming her for 3 years now. I feel very relieved to have someone so talented and loving taking care of my dog. I am always surprise to see Sahara (pictured attached) after her grooming as she always comes out looking more beautiful with pretty bows and/or scarfs.<span class="icon fa-solid fa-quote-right"></span></p>
-               <h4>Dinery Dehart</h4>
-               <div class="stars">
-                  <span class="icon fa-solid fa-star"></span>
-                  <span class="icon fa-solid fa-star"></span>
-                  <span class="icon fa-solid fa-star"></span>
-                  <span class="icon fa-solid fa-star"></span>
-                  <span class="icon fa-solid fa-star"></span>
-               </div>
-            </div>
-         </div>
+        <div class="item-carousel">
+          <p>
+            <span class="icon fa-solid fa-quote-left"></span>We had a great
+            first experience with Happy Tail! Our two dogs, Dani and Stella,
+            loved the grooming and we think they look great! We will be using
+            them again!<span class="icon fa-solid fa-quote-right"></span>
+          </p>
+          <h4>Madison Jaulin</h4>
+          <Stars />
+        </div>
 
-         <br>
-         <br>
-      
+        <div class="item-carousel">
+          <p>
+            <span class="icon fa-solid fa-quote-left"></span>Impecable service!
+            Luka was so happy and calm, thank you for the attention to detail
+            and fir being so loving.<span class="icon fa-solid fa-quote-right"
+            ></span>
+          </p>
+          <h4>Pamela Weston</h4>
+          <Stars />
+        </div>
 
-         <ul class="actions special">
-						<li><a href="https://www.google.com/search?hl=en-VE&gl=ve&q=Happy+Tail+Grooming&ludocid=14539977730869703738&lsig=AB86z5UJG007TWPcrjgNUh7hJ793#" target="_blank" class="button alt">See More</a></li>
-					</ul>
+        <div class="item-carousel">
+          <p>
+            <span class="icon fa-solid fa-quote-left"></span>Excellent cocker
+            cut on my 14.5 year old black cocker. Not an easy cut to get right.
+            5 stars all the way.<span class="icon fa-solid fa-quote-right"
+            ></span>
+          </p>
+          <h4>Nancy King</h4>
+          <Stars />
+        </div>
+      </div>
 
-      </section>
-   </div>
+      <br />
+      <br />
+
+      <ul class="actions special">
+        <li>
+          <a
+            href="https://www.google.com/search?hl=en-VE&gl=ve&q=Happy+Tail+Grooming&ludocid=14539977730869703738&lsig=AB86z5UJG007TWPcrjgNUh7hJ793#"
+            target="_blank"
+            class="button alt">See More</a
+          >
+        </li>
+      </ul>
+    </section>
+  </div>
 </div>
 
 <script>
-   import Flickity from "flickity";
+  import Flickity from "flickity";
 
-   document.addEventListener("astro:page-load", () => {
-      const elem = document.querySelector(".reviews");
-      if (!elem) return;
+  document.addEventListener("astro:page-load", () => {
+    const elem = document.querySelector(".reviews");
+    if (!elem) return;
 
-      let flkty = new Flickity(".reviews", {
-         draggable: true,
-         contain: true,
-         freeScroll: true,
-         wrapAround: true,
-         pageDots: true,
-      });
-   });
+    let flkty = new Flickity(".reviews", {
+      draggable: true,
+      contain: true,
+      freeScroll: true,
+      wrapAround: true,
+      pageDots: true,
+    });
+  });
 </script>
 
-
 <style>
+  .reviews {
+    width: 85%;
+    margin: auto;
+  }
 
-   .reviews {
-      width: 85%;
-      margin: auto;
-   }
+  .icon {
+    margin-top: 2rem;
+    color: #ccc;
+    font-size: x-large;
+    display: inline;
+  }
 
-   .icon {
-      margin-top: 2rem;
-      color: #ccc;
-      font-size: x-large;
-      display: inline;
-   }
+  .stars .icon {
+    color: #e91c7e;
+    font-size: larger;
+  }
 
-   .stars .icon {
-      color: #E91C7E;
-      font-size: larger;
-   }
-   
-   
-   .fa-quote-left::before {
-      position: relative;
-      left: -1rem;
-      bottom: 1rem;
-   }
-   .fa-quote-right::before {
-      position: relative;
-      left: 1rem;
-      bottom: .25rem;
-   }
+  .fa-quote-left::before {
+    position: relative;
+    left: -1rem;
+    bottom: 1rem;
+  }
+  .fa-quote-right::before {
+    position: relative;
+    left: 1rem;
+    bottom: 0.25rem;
+  }
 
-   .item-carousel {
-      width: 100%;
-      height: auto;
-      padding: 3rem;
-      margin-right: 20px;
-      margin-bottom: 20px;
-   }
+  .item-carousel {
+    width: 100%;
+    height: auto;
+    padding: 3rem;
+    margin-right: 20px;
+    margin-bottom: 20px;
+  }
 </style>
-         
