--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -1,41 +1,46 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Image from "astro/components/Image.astro";
-import pic1 from "./../images/gallery/mobile-dog-grooming (1).jpg";
-import pic2 from "./../images/gallery/mobile-dog-grooming (2).jpg";
-import pic3 from "./../images/gallery/mobile-dog-grooming (3).jpg";
-import pic4 from "./../images/gallery/mobile-dog-grooming (4).jpg";
-import pic5 from "./../images/gallery/mobile-dog-grooming (5).jpg";
-import pic6 from "./../images/gallery/mobile-dog-grooming (6).jpg";
-import pic7 from "./../images/gallery/mobile-dog-grooming (7).jpg";
-import pic8 from "./../images/gallery/mobile-dog-grooming (8).jpg";
-import pic9 from "./../images/gallery/mobile-dog-grooming (9).jpg";
-import pic10 from "./../images/gallery/mobile-dog-grooming (10).jpg";
-import pic11 from "./../images/gallery/mobile-dog-grooming (11).jpg";
-import pic12 from "./../images/gallery/mobile-dog-grooming (12).jpg";
-import pic13 from "./../images/gallery/mobile-dog-grooming (13).jpg";
-import pic14 from "./../images/gallery/mobile-dog-grooming (14).jpg";
-import pic15 from "./../images/gallery/mobile-dog-grooming (15).jpg";
-import pic16 from "./../images/gallery/mobile-dog-grooming (16).jpg";
-import pic17 from "./../images/gallery/mobile-dog-grooming (17).jpg";
-import pic18 from "./../images/gallery/mobile-dog-grooming (18).jpg";
-import pic19 from "./../images/gallery/mobile-dog-grooming (19).jpg";
-import pic20 from "./../images/gallery/mobile-dog-grooming (20).jpg";
-import pic21 from "./../images/gallery/mobile-dog-grooming (21).jpg";
-import pic22 from "./../images/gallery/mobile-dog-grooming (22).jpg";
-import pic23 from "./../images/gallery/mobile-dog-grooming (23).jpg";
-import pic24 from "./../images/gallery/mobile-dog-grooming (24).jpg";
-import pic25 from "./../images/gallery/mobile-dog-grooming (25).jpg";
-import pic26 from "./../images/gallery/mobile-dog-grooming (26).jpg";
-import pic27 from "./../images/gallery/mobile-dog-grooming (27).jpg";
-import pic28 from "./../images/gallery/mobile-dog-grooming (28).jpg";
-import pic29 from "./../images/gallery/mobile-dog-grooming (29).jpg";
-import pic30 from "./../images/gallery/mobile-dog-grooming (30).jpg";
-import pic31 from "./../images/gallery/mobile-dog-grooming (31).jpg";
-import pic32 from "./../images/gallery/mobile-dog-grooming (32).jpg";
-import pic33 from "./../images/gallery/mobile-dog-grooming (33).jpg";
-import pic34 from "./../images/gallery/mobile-dog-grooming (34).jpg";
-import pic35 from "./../images/gallery/mobile-dog-grooming (35).jpg";
+import pic1 from "./../images/gallery/dog-grooming (1).jpg";
+import pic2 from "./../images/gallery/dog-grooming (2).jpg";
+import pic3 from "./../images/gallery/dog-grooming (3).jpg";
+import pic4 from "./../images/gallery/dog-grooming (4).jpg";
+import pic5 from "./../images/gallery/dog-grooming (5).jpg";
+import pic6 from "./../images/gallery/dog-grooming (6).jpg";
+import pic7 from "./../images/gallery/dog-grooming (7).jpg";
+import pic8 from "./../images/gallery/dog-grooming (8).jpg";
+import pic9 from "./../images/gallery/dog-grooming (9).jpg";
+import pic10 from "./../images/gallery/dog-grooming (10).jpg";
+import pic11 from "./../images/gallery/dog-grooming (11).jpg";
+import pic12 from "./../images/gallery/dog-grooming (12).jpg";
+import pic13 from "./../images/gallery/dog-grooming (13).jpg";
+import pic14 from "./../images/gallery/dog-grooming (14).jpg";
+import pic15 from "./../images/gallery/dog-grooming (15).jpg";
+import pic16 from "./../images/gallery/dog-grooming (16).jpg";
+import pic17 from "./../images/gallery/dog-grooming (17).jpg";
+import pic18 from "./../images/gallery/dog-grooming (18).jpg";
+import pic19 from "./../images/gallery/dog-grooming (19).jpg";
+import pic20 from "./../images/gallery/dog-grooming (20).jpg";
+import pic21 from "./../images/gallery/dog-grooming (21).jpg";
+import pic22 from "./../images/gallery/dog-grooming (22).jpg";
+import pic23 from "./../images/gallery/dog-grooming (23).jpg";
+import pic24 from "./../images/gallery/dog-grooming (24).jpg";
+import pic25 from "./../images/gallery/dog-grooming (25).jpg";
+import pic26 from "./../images/gallery/dog-grooming (26).jpg";
+import pic27 from "./../images/gallery/dog-grooming (27).jpg";
+import pic28 from "./../images/gallery/dog-grooming (28).jpg";
+import pic29 from "./../images/gallery/dog-grooming (29).jpg";
+import pic30 from "./../images/gallery/dog-grooming (30).jpg";
+import pic31 from "./../images/gallery/dog-grooming (31).jpg";
+import pic32 from "./../images/gallery/dog-grooming (32).jpg";
+import pic33 from "./../images/gallery/dog-grooming (33).jpg";
+import pic34 from "./../images/gallery/dog-grooming (34).jpg";
+import pic35 from "./../images/gallery/dog-grooming (35).jpg";
+import pic36 from "./../images/gallery/dog-grooming (36).jpg";
+import pic37 from "./../images/gallery/dog-grooming (37).jpg";
+import pic38 from "./../images/gallery/dog-grooming (38).jpg";
+import pic39 from "./../images/gallery/dog-grooming (39).jpg";
+import pic40 from "./../images/gallery/dog-grooming (40).jpg";
 ---
 
 <Layout title="Gallery :: Happy Tail Grooming">
@@ -221,7 +226,32 @@ import pic35 from "./../images/gallery/mobile-dog-grooming (35).jpg";
                <Image src={pic35} alt="" />
             </a>
          </div>
-         
+         <div class="image">
+            <a href={pic36.src} data-lightbox="gallery">
+               <Image src={pic36} alt="" />
+            </a>
+         </div>
+         <div class="image">
+            <a href={pic37.src} data-lightbox="gallery">
+               <Image src={pic37} alt="" />
+            </a>
+         </div>
+         <div class="image">
+            <a href={pic38.src} data-lightbox="gallery">
+               <Image src={pic38} alt="" />
+            </a>
+         </div>
+         <div class="image">
+            <a href={pic39.src} data-lightbox="gallery">
+               <Image src={pic39} alt="" />
+            </a>
+         </div>
+         <div class="image">
+            <a href={pic40.src} data-lightbox="gallery">
+               <Image src={pic40} alt="" />
+            </a>
+         </div>
+
 
       </div>
    </section>
