--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -41,6 +41,14 @@ import pic37 from "./../images/gallery/dog-grooming (37).jpg";
 import pic38 from "./../images/gallery/dog-grooming (38).jpg";
 import pic39 from "./../images/gallery/dog-grooming (39).jpg";
 import pic40 from "./../images/gallery/dog-grooming (40).jpg";
+import pic41 from "./../images/gallery/dog-grooming (41).jpg";
+import pic42 from "./../images/gallery/dog-grooming (42).jpg";
+import pic43 from "./../images/gallery/dog-grooming (43).jpg";
+import pic44 from "./../images/gallery/dog-grooming (44).jpg";
+import pic45 from "./../images/gallery/dog-grooming (45).jpg";
+import pic46 from "./../images/gallery/dog-grooming (46).jpg";
+import pic47 from "./../images/gallery/dog-grooming (47).jpg";
+import pic48 from "./../images/gallery/dog-grooming (48).jpg";
 ---
 
 <Layout title="Gallery :: Happy Tail Grooming">
@@ -249,6 +257,46 @@ import pic40 from "./../images/gallery/dog-grooming (40).jpg";
          <div class="image">
             <a href={pic40.src} data-lightbox="gallery">
                <Image src={pic40} alt="" />
+            </a>
+         </div>
+         <div class="image">
+            <a href={pic41.src} data-lightbox="gallery">
+               <Image src={pic41} alt="" />
+            </a>
+         </div>
+         <div class="image">
+            <a href={pic42.src} data-lightbox="gallery">
+               <Image src={pic42} alt="" />
+            </a>
+         </div>
+         <div class="image">
+            <a href={pic43.src} data-lightbox="gallery">
+               <Image src={pic43} alt="" />
+            </a>
+         </div>
+         <div class="image">
+            <a href={pic44.src} data-lightbox="gallery">
+               <Image src={pic44} alt="" />
+            </a>
+         </div>   
+         <div class="image">
+            <a href={pic45.src} data-lightbox="gallery">
+               <Image src={pic45} alt="" />
+            </a>
+         </div>   
+         <div class="image">
+            <a href={pic46.src} data-lightbox="gallery">
+               <Image src={pic46} alt="" />
+            </a>
+         </div>   
+         <div class="image">
+            <a href={pic47.src} data-lightbox="gallery">
+               <Image src={pic47} alt="" />
+            </a>
+         </div>   
+         <div class="image">
+            <a href={pic48.src} data-lightbox="gallery">
+               <Image src={pic48} alt="" />
             </a>
          </div>
 
