--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -1,55 +1,75 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Image from "astro/components/Image.astro";
-import pic1 from "./../images/gallery/dog-grooming (1).jpg";
-import pic2 from "./../images/gallery/dog-grooming (2).jpg";
-import pic3 from "./../images/gallery/dog-grooming (3).jpg";
-import pic4 from "./../images/gallery/dog-grooming (4).jpg";
-import pic5 from "./../images/gallery/dog-grooming (5).jpg";
-import pic6 from "./../images/gallery/dog-grooming (6).jpg";
-import pic7 from "./../images/gallery/dog-grooming (7).jpg";
-import pic8 from "./../images/gallery/dog-grooming (8).jpg";
-import pic9 from "./../images/gallery/dog-grooming (9).jpg";
-import pic10 from "./../images/gallery/dog-grooming (10).jpg";
-import pic11 from "./../images/gallery/dog-grooming (11).jpg";
-import pic12 from "./../images/gallery/dog-grooming (12).jpg";
-import pic13 from "./../images/gallery/dog-grooming (13).jpg";
-import pic14 from "./../images/gallery/dog-grooming (14).jpg";
-import pic15 from "./../images/gallery/dog-grooming (15).jpg";
-import pic16 from "./../images/gallery/dog-grooming (16).jpg";
-import pic17 from "./../images/gallery/dog-grooming (17).jpg";
-import pic18 from "./../images/gallery/dog-grooming (18).jpg";
-import pic19 from "./../images/gallery/dog-grooming (19).jpg";
-import pic20 from "./../images/gallery/dog-grooming (20).jpg";
-import pic21 from "./../images/gallery/dog-grooming (21).jpg";
-import pic22 from "./../images/gallery/dog-grooming (22).jpg";
-import pic23 from "./../images/gallery/dog-grooming (23).jpg";
-import pic24 from "./../images/gallery/dog-grooming (24).jpg";
-import pic25 from "./../images/gallery/dog-grooming (25).jpg";
-import pic26 from "./../images/gallery/dog-grooming (26).jpg";
-import pic27 from "./../images/gallery/dog-grooming (27).jpg";
-import pic28 from "./../images/gallery/dog-grooming (28).jpg";
-import pic29 from "./../images/gallery/dog-grooming (29).jpg";
-import pic30 from "./../images/gallery/dog-grooming (30).jpg";
-import pic31 from "./../images/gallery/dog-grooming (31).jpg";
-import pic32 from "./../images/gallery/dog-grooming (32).jpg";
-import pic33 from "./../images/gallery/dog-grooming (33).jpg";
-import pic34 from "./../images/gallery/dog-grooming (34).jpg";
-import pic35 from "./../images/gallery/dog-grooming (35).jpg";
-import pic36 from "./../images/gallery/dog-grooming (36).jpg";
-import pic37 from "./../images/gallery/dog-grooming (37).jpg";
-import pic38 from "./../images/gallery/dog-grooming (38).jpg";
-import pic39 from "./../images/gallery/dog-grooming (39).jpg";
-import pic40 from "./../images/gallery/dog-grooming (40).jpg";
-import pic41 from "./../images/gallery/dog-grooming (41).jpg";
-import pic42 from "./../images/gallery/dog-grooming (42).jpg";
-import pic43 from "./../images/gallery/dog-grooming (43).jpg";
-import pic44 from "./../images/gallery/dog-grooming (44).jpg";
-import pic45 from "./../images/gallery/dog-grooming (45).jpg";
-import pic46 from "./../images/gallery/dog-grooming (46).jpg";
-import pic47 from "./../images/gallery/dog-grooming (47).jpg";
-import pic48 from "./../images/gallery/dog-grooming (48).jpg";
+import pic1 from "./../images/gallery/dog-grooming-(1).jpg";
+import pic2 from "./../images/gallery/dog-grooming-(2).jpg";
+import pic3 from "./../images/gallery/dog-grooming-(3).jpg";
+import pic4 from "./../images/gallery/dog-grooming-(4).jpg";
+import pic5 from "./../images/gallery/dog-grooming-(5).jpg";
+import pic6 from "./../images/gallery/dog-grooming-(6).jpg";
+import pic7 from "./../images/gallery/dog-grooming-(7).jpg";
+import pic8 from "./../images/gallery/dog-grooming-(8).jpg";
+import pic9 from "./../images/gallery/dog-grooming-(9).jpg";
+import pic10 from "./../images/gallery/dog-grooming-(10).jpg";
+import pic11 from "./../images/gallery/dog-grooming-(11).jpg";
+import pic12 from "./../images/gallery/dog-grooming-(12).jpg";
+import pic13 from "./../images/gallery/dog-grooming-(13).jpg";
+import pic14 from "./../images/gallery/dog-grooming-(14).jpg";
+import pic15 from "./../images/gallery/dog-grooming-(15).jpg";
+import pic16 from "./../images/gallery/dog-grooming-(16).jpg";
+import pic17 from "./../images/gallery/dog-grooming-(17).jpg";
+import pic18 from "./../images/gallery/dog-grooming-(18).jpg";
+import pic19 from "./../images/gallery/dog-grooming-(19).jpg";
+import pic20 from "./../images/gallery/dog-grooming-(20).jpg";
+import pic21 from "./../images/gallery/dog-grooming-(21).jpg";
+import pic22 from "./../images/gallery/dog-grooming-(22).jpg";
+import pic23 from "./../images/gallery/dog-grooming-(23).jpg";
+import pic24 from "./../images/gallery/dog-grooming-(24).jpg";
+import pic25 from "./../images/gallery/dog-grooming-(25).jpg";
+import pic26 from "./../images/gallery/dog-grooming-(26).jpg";
+import pic27 from "./../images/gallery/dog-grooming-(27).jpg";
+import pic28 from "./../images/gallery/dog-grooming-(28).jpg";
+import pic29 from "./../images/gallery/dog-grooming-(29).jpg";
+import pic30 from "./../images/gallery/dog-grooming-(30).jpg";
+import pic31 from "./../images/gallery/dog-grooming-(31).jpg";
+import pic32 from "./../images/gallery/dog-grooming-(32).jpg";
+import pic33 from "./../images/gallery/dog-grooming-(33).jpg";
+import pic34 from "./../images/gallery/dog-grooming-(34).jpg";
+import pic35 from "./../images/gallery/dog-grooming-(35).jpg";
+import pic36 from "./../images/gallery/dog-grooming-(36).jpg";
+import pic37 from "./../images/gallery/dog-grooming-(37).jpg";
+import pic38 from "./../images/gallery/dog-grooming-(38).jpg";
+import pic39 from "./../images/gallery/dog-grooming-(39).jpg";
+import pic40 from "./../images/gallery/dog-grooming-(40).jpg";
+import pic41 from "./../images/gallery/dog-grooming-(41).jpg";
+import pic42 from "./../images/gallery/dog-grooming-(42).jpg";
+import pic43 from "./../images/gallery/dog-grooming-(43).jpg";
+import pic44 from "./../images/gallery/dog-grooming-(44).jpg";
+import pic45 from "./../images/gallery/dog-grooming-(45).jpg";
+import pic46 from "./../images/gallery/dog-grooming-(46).jpg";
+import pic47 from "./../images/gallery/dog-grooming-(47).jpg";
+import pic48 from "./../images/gallery/dog-grooming-(48).jpg"; 
+import pic49 from "./../images/gallery/dog-grooming-(49).jpg"; 
+import pic50 from "./../images/gallery/dog-grooming-(50).jpg"; 
+import pic51 from "./../images/gallery/dog-grooming-(51).jpg"; 
+import pic52 from "./../images/gallery/dog-grooming-(52).jpg"; 
+import pic53 from "./../images/gallery/dog-grooming-(53).jpg";    
+import pic54 from "./../images/gallery/dog-grooming-(54).jpg"; 
+import pic55 from "./../images/gallery/dog-grooming-(55).jpg"; 
+import pic56 from "./../images/gallery/dog-grooming-(56).jpg"; 
+import pic57 from "./../images/gallery/dog-grooming-(57).jpg"; 
+import pic58 from "./../images/gallery/dog-grooming-(58).jpg"; 
+import pic59 from "./../images/gallery/dog-grooming-(59).jpg"; 
+import pic60 from "./../images/gallery/dog-grooming-(60).jpg"; 
+import pic61 from "./../images/gallery/dog-grooming-(61).jpg"; 
+import pic62 from "./../images/gallery/dog-grooming-(62).jpg"; 
+import pic63 from "./../images/gallery/dog-grooming-(63).jpg"; 
+import pic64 from "./../images/gallery/dog-grooming-(64).jpg"; 
+import pic65 from "./../images/gallery/dog-grooming-(65).jpg"; 
+
+const pic = [pic1, pic2, pic3, pic4, pic5, pic6, pic7, pic8, pic9, pic10, pic11, pic12, pic13, pic14, pic15, pic16, pic17, pic18, pic19, pic20, pic21, pic22, pic23, pic24, pic25, pic26, pic27, pic28, pic29, pic30, pic31, pic32, pic33, pic34, pic35, pic36, pic37, pic38, pic39, pic40, pic41, pic42, pic43, pic44, pic45, pic46, pic47, pic48, pic49, pic50, pic51, pic52, pic53, pic54, pic55, pic56, pic57, pic58, pic59, pic60, pic61, pic62, pic63, pic64, pic65];
 ---
+
 
 <Layout title="Gallery :: Happy Tail Grooming">
    <!-- Main -->
@@ -58,249 +78,14 @@ import pic48 from "./../images/gallery/dog-grooming (48).jpg";
          <h2>Gallery</h2>
       </header>
       <div class="box gallery">
-         <div class="image">
-            <a href={pic1.src} data-lightbox="gallery"
-               ><Image src={pic1} alt="" /></a
-            >
-         </div>
-         <div class="image">
-            <a href={pic2.src} data-lightbox="gallery"
-               ><Image src={pic2} alt="" /></a
-            >
-         </div>
-         <div class="image">
-            <a href={pic3.src} data-lightbox="gallery"
-               ><Image src={pic3} alt="" /></a
-            >
-         </div>
+         {Array.from({ length: 65 }).map((_, index) => (
 
-         <div class="image">
-            <a href={pic4.src} data-lightbox="gallery"
-               ><Image src={pic4} alt="" /></a
-            >
-         </div>
-         <div class="image">
-            <a href={pic5.src} data-lightbox="gallery"
-               ><Image src={pic5} alt="" /></a
-            >
-         </div>
-         <div class="image">
-            <a href={pic6.src} data-lightbox="gallery">
-               <Image src={pic6} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic7.src} data-lightbox="gallery"
-               ><Image src={pic7} alt="" /></a
-            >
-         </div>
-         <div class="image">
-            <a href={pic8.src} data-lightbox="gallery"
-               ><Image src={pic8} alt="" /></a
-            >
-         </div>
-         <div class="image">
-            <a href={pic9.src} data-lightbox="gallery">
-               <Image src={pic9} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic10.src} data-lightbox="gallery">
-               <Image src={pic10} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic11.src} data-lightbox="gallery">
-               <Image src={pic11} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic12.src} data-lightbox="gallery">
-               <Image src={pic12} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic13.src} data-lightbox="gallery">
-               <Image src={pic13} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic14.src} data-lightbox="gallery">
-               <Image src={pic14} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic15.src} data-lightbox="gallery">
-               <Image src={pic15} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic16.src} data-lightbox="gallery">
-               <Image src={pic16} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic17.src} data-lightbox="gallery">
-               <Image src={pic17} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic18.src} data-lightbox="gallery">
-               <Image src={pic18} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic20.src} data-lightbox="gallery">
-               <Image src={pic20} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic19.src} data-lightbox="gallery">
-               <Image src={pic19} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic21.src} data-lightbox="gallery">
-               <Image src={pic21} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic22.src} data-lightbox="gallery">
-               <Image src={pic22} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic23.src} data-lightbox="gallery">
-               <Image src={pic23} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic24.src} data-lightbox="gallery">
-               <Image src={pic24} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic25.src} data-lightbox="gallery">
-               <Image src={pic25} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic26.src} data-lightbox="gallery">
-               <Image src={pic26} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic27.src} data-lightbox="gallery">
-               <Image src={pic27} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic28.src} data-lightbox="gallery">
-               <Image src={pic28} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic29.src} data-lightbox="gallery">
-               <Image src={pic29} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic30.src} data-lightbox="gallery">
-               <Image src={pic30} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic31.src} data-lightbox="gallery">
-               <Image src={pic31} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic32.src} data-lightbox="gallery">
-               <Image src={pic32} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic33.src} data-lightbox="gallery">
-               <Image src={pic33} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic34.src} data-lightbox="gallery">
-               <Image src={pic34} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic35.src} data-lightbox="gallery">
-               <Image src={pic35} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic36.src} data-lightbox="gallery">
-               <Image src={pic36} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic37.src} data-lightbox="gallery">
-               <Image src={pic37} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic38.src} data-lightbox="gallery">
-               <Image src={pic38} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic39.src} data-lightbox="gallery">
-               <Image src={pic39} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic40.src} data-lightbox="gallery">
-               <Image src={pic40} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic41.src} data-lightbox="gallery">
-               <Image src={pic41} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic42.src} data-lightbox="gallery">
-               <Image src={pic42} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic43.src} data-lightbox="gallery">
-               <Image src={pic43} alt="" />
-            </a>
-         </div>
-         <div class="image">
-            <a href={pic44.src} data-lightbox="gallery">
-               <Image src={pic44} alt="" />
-            </a>
-         </div>   
-         <div class="image">
-            <a href={pic45.src} data-lightbox="gallery">
-               <Image src={pic45} alt="" />
-            </a>
-         </div>   
-         <div class="image">
-            <a href={pic46.src} data-lightbox="gallery">
-               <Image src={pic46} alt="" />
-            </a>
-         </div>   
-         <div class="image">
-            <a href={pic47.src} data-lightbox="gallery">
-               <Image src={pic47} alt="" />
-            </a>
-         </div>   
-         <div class="image">
-            <a href={pic48.src} data-lightbox="gallery">
-               <Image src={pic48} alt="" />
-            </a>
-         </div>
-
-
+            <div class="image">
+               <a href={pic[index].src} data-lightbox="gallery">
+                  <Image src={pic[index]} alt="" />
+               </a>
+            </div>
+         ))}
       </div>
    </section>
 </Layout>
