--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import cred1 from "../images/credentials1.webp";
 import cred2 from "../images/credentials2.webp";
 import cred3 from "../images/credentials3.webp";
 import publiModal from "../images/publi-modal.webp";
-import Modal from "../components/Modal.astro";
+// import Modal from "../components/Modal.astro";
 
 import picCathe from "../images/catherine-toro-groomer.webp";
 import Reviews from "../components/Reviews.astro";
@@ -171,11 +171,11 @@ import "flickity/dist/flickity.min.css";
 
 	</section>
 
-	<Modal id="dialog" open="Open modal">
+	<!-- <Modal id="dialog" open="Open modal">
 		<section>
 			<Image src={publiModal} alt="Ads Happy" />
 		</section>
-	</Modal>
+	</Modal> -->
 
 	<!-- CTA -->
 	<!-- <section id="cta">
